[package]
name = "ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
serde_json = "1.0"
serde = { version = "1.0.164", features = ["derive"] }